RESOLVED FIXED298403
AX: WebKit can sometimes fail to expose content within dynamically expanded details elements in the accessibility tree
https://bugs.webkit.org/show_bug.cgi?id=298403
Summary AX: WebKit can sometimes fail to expose content within dynamically expanded d...
Tyler Wilcock
Reported 2025-09-04 10:36:16 PDT
...
Attachments
Tyler Wilcock
Comment 1 2025-09-04 10:52:43 PDT
Radar WebKit Bug Importer
Comment 2 2025-09-04 10:52:52 PDT
Tyler Wilcock
Comment 3 2025-09-04 10:53:56 PDT
EWS
Comment 4 2025-09-04 20:24:51 PDT
Committed 299601@main (b4ca025c66ee): <https://commits.webkit.org/299601@main> Reviewed commits have been landed. Closing PR #50312 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.