AX: WebKit can sometimes fail to expose content within dynamically expanded details elements in the accessibility tree https://bugs.webkit.org/show_bug.cgi?id=298403 rdar://159291226

Reviewed by Joshua Hoffman.

We need to re-compute is-ignored for descendants of details that become expanded or collapsed.

* LayoutTests/accessibility/missing-content-inside-expanded-details-expected.txt: Added.
* LayoutTests/accessibility/missing-content-inside-expanded-details.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::recomputeIsIgnoredForDescendants):
* Source/WebCore/accessibility/AccessibilityObject.h:

Canonical link: https://commits.webkit.org/299601@main